feat: export current ring report
